Added Messages page

--- a/application/client/src/pages/Dashboard/Messages/Messages.css
+++ b/application/client/src/pages/Dashboard/Messages/Messages.css
@@ -5,3 +5,10 @@ div.a {
     font-size: 25px;
     text-decoration: underline;
 }
+.alert {
+    padding:50px;
+    background-color: gainsboro;
+    color:black;
+
+}
+
