added image upload functionality to create listing

--- a/application/client/src/index.css
+++ b/application/client/src/index.css
@@ -23,3 +23,9 @@ code {
   max-width: 1280px;
   gap: 1rem;
 }
+
+.uploadPictureContainer {
+  width: 20% !important;
+  max-width: 200px !important;
+  margin: 10px !important;
+}
