--- a/application/client/src/index.css
+++ b/application/client/src/index.css
@@ -24,7 +24,7 @@ code {
   gap: 1rem;
 }
 
-.grid_column {
+.grid-column {
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -34,4 +34,16 @@ code {
   width: 20% !important;
   max-width: 200px !important;
   margin: 10px !important;
+}
+
+.page {
+  margin-top: 2rem;
+  padding: 2rem;
+}
+
+@media only screen and (max-width: 640px) {
+  .page {
+    margin-top: 1rem;
+    padding: 0 0.5rem;
+  }
 }
